# c_cpp_dynamic_link

./: CMakeLists.txt  logger.cpp  main.cpp  share.cpp  test.cpp  test.h  test2.cpp  test3.c
